--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,11 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <p onclick="" >hello world</p>
 
-    <!-- <script>
-        alert(1);
-    </script> -->
+
     <script src="js/script.js"></script>
 
 </body>
